Integrated Dark Mode Toggle Functionality

--- a/axion-patient_portal/src/locales/en.json
+++ b/axion-patient_portal/src/locales/en.json
@@ -4,6 +4,9 @@
   "name": "Name",
   "age": "Age",
   "height": "Height",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
   "weight": "Weight",
   "bloodType": "Blood Type",
   "myMedications": "My Medications",
