--- a/axion-patient_portal/src/locales/si.json
+++ b/axion-patient_portal/src/locales/si.json
@@ -3,6 +3,9 @@
   "basicHealthInformation": "මූලික සෞඛ්‍ය තොරතුරු",
   "name": "නම",
   "age": "වයස",
+  "gender": "ලිංගය",
+  "male": "පිරිමි",
+  "female": "ස්ත්\u200Dරී",
   "height": "උස",
   "weight": "බර",
   "bloodType": "රක්ත වර්ගය",
