--- a/axion-patient_portal/src/locales/ta.json
+++ b/axion-patient_portal/src/locales/ta.json
@@ -3,6 +3,9 @@
   "basicHealthInformation": "அடிப்படை ஆரோக்கியத் தகவல்",
   "name": "பெயர்",
   "age": "வயது",
+  "gender": "பாலினம்",
+  "male": "ஆண்",
+  "female": "பெண்",
   "height": "உயரம்",
   "weight": "எடை",
   "bloodType": "ரத்த வகை",
