REST and GraphQL added

--- a/axion/project 3/flutter_application_1/lib/l10n/app_en.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_en.arb
@@ -39,7 +39,7 @@
   "noNewNotifications": "You have no new notifications.",
   "notifications": "Notifications",
   "medicationReminder": "Medication Reminder",
-  "medicationReminderDescription": "It’s almost time to take your Amlodipine.",
+  "medicationReminderDescription": "It's almost time to take your Amlodipine.",
   "appointment": "Appointment",
   "appointmentDescription": "You have a doctor appointment tomorrow at 3:00 PM.",
   "medicalNotifications": "Medical Notifications",
@@ -54,6 +54,53 @@
   "scanToConnect": "Scan to Connect",
   "instructionText": "Please scan the QR code to securely connect with your doctor.",
   "shareButton": "Share Securely",
-  "log": "System Logs"
-  
+  "log": "System Logs",
+  "downloadedReports": "Downloaded Reports",
+  "noDownloadedReports": "No Downloaded Reports",
+  "reportDeleted": "Report Deleted Successfully",
+  "medicalRecords": "Medical Records",
+  "error": "Error",
+  "reminders": "Reminders",
+  "recentNotifications": "Recent Notifications",
+  "retry": "Retry",
+  "noLinksAvailable": "No links available",
+  "location": "Location",
+  "user": "User",
+  "action": "Action",
+  "additionalDetails": "Additional Details",
+  "addMedication": "Add Medication",
+  "medicationName": "Medication Name",
+  "medicationNameRequired": "Medication name is required",
+  "add": "Add",
+  "editMedication": "Edit Medication",
+  "save": "Save",
+  "deleteAllNotifications": "Delete All Notifications",
+  "deleteAllNotificationsConfirm": "Are you sure you want to delete all notifications?",
+  "delete": "Delete",
+  "markAllAsRead": "Mark All as Read",
+  "noNotifications": "No Notifications",
+  "markAsRead": "Mark as Read",
+  "phoneRequired": "Phone is required",
+  "invalidEmail": "Invalid email",
+  "emailRequired": "Email is required",
+  "lastNameRequired": "Last name is required",
+  "lastName": "Last Name",
+  "firstNameRequired": "First name is required",
+  "firstName": "First Name",
+  "name": "Name",
+  "notificationPreferences": "Notification Preferences",
+  "privacySettings": "Privacy Settings",
+  "deleteAccountWarning": "Deleting your account will remove all data permanently",
+  "allFieldsRequired": "All fields are required",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "success": "Success",
+  "passwordChangeSuccess": "Password changed successfully",
+  "currentPassword": "Current Password",
+  "newPassword": "New Password",
+  "confirmNewPassword": "Confirm New Password",
+  "signUpSuccess": "Sign up successful",
+  "signUp": "Sign Up",
+  "medications": "Medications",
+  "noMedications": "No Medications",
+  "noAllergies": "No Allergies"
 }
