--- a/axion/project 3/flutter_application_1/lib/l10n/app_si.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_si.arb
@@ -48,11 +48,59 @@
   "medicalNotifications": "වෛද්‍ය දැනුම්දීම්",
   "reports": "වාර්තා",
   "homeTitle": "සාදරයෙන් පිළිගනිමු {name}",
-  "ok":"හරි",
+  "ok": "හරි",
   "deleteMessage": "ඔබගේ ගිණුම මැකීමට විශ්වාසද?",
   "appTitle": "ඔබගේ වෛද්‍යවරයා සමඟ සම්බන්ධ වන්න",
   "scanToConnect": "සම්බන්ධ වීමට ස්කෑන් කරන්න",
   "instructionText": "ඔබගේ වෛද්‍යවරයා සමඟ ආරක්ෂිතව සම්බන්ධ වීමට කරුණාකර QR කේතය ස්කෑන් කරන්න.",
   "shareButton": "ආරක්ෂිතව බෙදාගන්න",
-  "log": "පද්ධති ලොග්"
+  "log": "පද්ධති ලොග්",
+  "downloadedReports": "බාගත කළ වාර්තා",
+  "noDownloadedReports": "බාගත කළ වාර්තා නැත",
+  "reportDeleted": "වාර්තාව සාර්ථකව මකා දමන ලදී",
+  "medicalRecords": "වෛද්‍ය වාර්තා",
+  "error": "දෝෂය",
+  "reminders": "මතක් කිරීම්",
+  "recentNotifications": "මෑත දැනුම්දීම්",
+  "retry": "නැවත උත්සාහ කරන්න",
+  "noLinksAvailable": "ලබා ගත හැකි සබැඳි නොමැත",
+  "location": "ස්ථානය",
+  "user": "පරිශීලක",
+  "action": "ක්‍රියා",
+  "additionalDetails": "අමතර විස්තර",
+  "addMedication": "ඖෂධ එකතු කරන්න",
+  "medicationName": "ඖෂධ නාමය",
+  "medicationNameRequired": "ඖෂධ නාමය අවශ්‍ය වේ",
+  "add": "එකතු කරන්න",
+  "editMedication": "ඖෂධ සංස්කරණය කරන්න",
+  "save": "සුරකින්න",
+  "deleteAllNotifications": "සියලු දැනුම්දීම් මකන්න",
+  "deleteAllNotificationsConfirm": "සියලු දැනුම්දීම් මකීමට ඔබට විශ්වාසද?",
+  "delete": "මකන්න",
+  "markAllAsRead": "සියල්ල කියවූ බව සදහන් කරන්න",
+  "noNotifications": "දැනුම්දීම් නොමැත",
+  "markAsRead": "කියවූ බව සදහන් කරන්න",
+  "phoneRequired": "දුරකථන අංකය අවශ්‍ය වේ",
+  "invalidEmail": "අවලංගු විද්‍යුත් තැපෑල",
+  "emailRequired": "විද්‍යුත් තැපෑල අවශ්‍ය වේ",
+  "lastNameRequired": "අවසන් නාමය අවශ්‍ය වේ",
+  "lastName": "අවසන් නාමය",
+  "firstNameRequired": "මුල් නාමය අවශ්‍ය වේ",
+  "firstName": "මුල් නාමය",
+  "name": "නාමය",
+  "notificationPreferences": "දැනුම්දීම් කැමැත්ත",
+  "privacySettings": "ගෝපනීය සැකසුම්",
+  "deleteAccountWarning": "ඔබගේ ගිණුම මකීමෙන් සියලු දත්ත ස්ථිරව මකයි",
+  "allFieldsRequired": "සියලු ක්ෂේත්‍ර අවශ්‍ය වේ",
+  "passwordsDoNotMatch": "මුරපද නොගැලපෙයි",
+  "success": "සාර්ථකයි",
+  "passwordChangeSuccess": "මුරපදය සාර්ථකව වෙනස් කරන ලදී",
+  "currentPassword": "වත්මන් මුරපදය",
+  "newPassword": "නව මුරපදය",
+  "confirmNewPassword": "නව මුරපදය තහවුරු කරන්න",
+  "signUpSuccess": "ලියාපදිංචිය සාර්ථකයි",
+  "signUp": "ලියාපදිංචි වන්න",
+  "medications": "ඖෂධ",
+  "noMedications": "ඖෂධ නොමැත",
+  "noAllergies": "ආතතතා නොමැත"
 }
