--- a/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
@@ -38,21 +38,69 @@
   "noMedicalAlerts": "எதிர்வரும் மருத்துவ அறிவிப்புகள் இல்லை.",
   "noNewNotifications": "உங்களிடம் புதிய அறிவிப்புகள் இல்லை.",
   "notifications": "அறிவிப்புகள்",
-  "medicationReminder": "மருந்து நினைவூட்டல்",
   "status": "நிலைமை",
   "date": "தேதி",
   "time": "நேரம்",
+  "medicationReminder": "மருந்து நினைவூட்டல்",
   "medicationReminderDescription": "உங்கள் அம்லோடிபைனை எடுத்துக் கொள்ளும் நேரம் வந்துவிட்டது.",
   "appointment": "முன்பதிவு",
   "appointmentDescription": "நாளைக்கு மாலை 3:00 மணிக்கு உங்களுக்கு மருத்துவர் சந்திப்பு உள்ளது.",
   "medicalNotifications": "மருத்துவ அறிவிப்புகள்",
   "reports": "அறிக்கைகள்",
   "homeTitle": "வரவேற்கிறோம் {name}",
-  "ok":"சரி",
+  "ok": "சரி",
   "deleteMessage": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா?",
   "appTitle": "உங்கள் மருத்துவருடன் இணைக்கவும்",
   "scanToConnect": "இணைக்க ஸ்கேன் செய்யவும்",
   "instructionText": "உங்கள் மருத்துவருடன் பாதுகாப்பாக இணைவதற்காக தயவுசெய்து QR குறியீட்டை ஸ்கேன் செய்யவும்.",
   "shareButton": "பாதுகாப்பாக பகிரவும்",
-  "log": "கணினி பதிவுகள்"
+  "log": "கணினி பதிவுகள்",
+  "downloadedReports": "பதிவிறக்கப்பட்ட அறிக்கைகள்",
+  "noDownloadedReports": "பதிவிறக்கப்பட்ட அறிக்கைகள் இல்லை",
+  "reportDeleted": "அறிக்கை வெற்றிகரமாக நீக்கப்பட்டது",
+  "medicalRecords": "மருத்துவ பதிவுகள்",
+  "error": "பிழை",
+  "reminders": "நினைவூட்டல்கள்",
+  "recentNotifications": "சமீபத்திய அறிவிப்புகள்",
+  "retry": "மீண்டும் முயற்சி செய்க",
+  "noLinksAvailable": "இணைப்புகள் கிடைக்கவில்லை",
+  "location": "இடம்",
+  "user": "பயனர்",
+  "action": "நடவடிக்கை",
+  "additionalDetails": "கூடுதல் விவரங்கள்",
+  "addMedication": "மருந்து சேர்க்கவும்",
+  "medicationName": "மருந்து பெயர்",
+  "medicationNameRequired": "மருந்து பெயர் தேவை",
+  "add": "சேர்",
+  "editMedication": "மருந்தை திருத்தவும்",
+  "save": "சேமி",
+  "deleteAllNotifications": "அனைத்து அறிவிப்புகளையும் நீக்கு",
+  "deleteAllNotificationsConfirm": "அனைத்து அறிவிப்புகளையும் நீக்க விரும்புகிறீர்களா?",
+  "delete": "நீக்கு",
+  "markAllAsRead": "அனைத்தையும் வாசிக்கப்பட்டதாகக் குறி",
+  "noNotifications": "அறிவிப்புகள் இல்லை",
+  "markAsRead": "வாசிக்கப்பட்டதாக குறி",
+  "phoneRequired": "தொலைபேசி தேவை",
+  "invalidEmail": "தவறான மின்னஞ்சல்",
+  "emailRequired": "மின்னஞ்சல் தேவை",
+  "lastNameRequired": "கடைசி பெயர் தேவை",
+  "lastName": "கடைசி பெயர்",
+  "firstNameRequired": "முதல் பெயர் தேவை",
+  "firstName": "முதல் பெயர்",
+  "name": "பெயர்",
+  "notificationPreferences": "அறிவிப்பு விருப்பங்கள்",
+  "privacySettings": "தனியுரிமை அமைப்புகள்",
+  "deleteAccountWarning": "உங்கள் கணக்கை நீக்குவதால் அனைத்து தரவுகளும் நிரந்தரமாக நீக்கப்படும்",
+  "allFieldsRequired": "அனைத்து புலங்களும் தேவை",
+  "passwordsDoNotMatch": "கடவுச்சொற்கள் பொருந்தவில்லை",
+  "success": "வெற்றி",
+  "passwordChangeSuccess": "கடவுச்சொல் வெற்றிகரமாக மாற்றப்பட்டது",
+  "currentPassword": "தற்போதைய கடவுச்சொல்",
+  "newPassword": "புதிய கடவுச்சொல்",
+  "confirmNewPassword": "புதிய கடவுச்சொல்லை உறுதிப்படுத்தவும்",
+  "signUpSuccess": "பதிவு வெற்றிகரமாக முடிந்தது",
+  "signUp": "பதிவு செய்யவும்",
+  "medications": "மருந்துகள்",
+  "noMedications": "மருந்துகள் இல்லை",
+  "noAllergies": "அலர்ஜிகள் இல்லை"
 }
