--- a/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
@@ -38,9 +38,6 @@
   "noMedicalAlerts": "எதிர்வரும் மருத்துவ அறிவிப்புகள் இல்லை.",
   "noNewNotifications": "உங்களிடம் புதிய அறிவிப்புகள் இல்லை.",
   "notifications": "அறிவிப்புகள்",
-  "status": "நிலைமை",
-  "date": "தேதி",
-  "time": "நேரம்",
   "medicationReminder": "மருந்து நினைவூட்டல்",
   "medicationReminderDescription": "உங்கள் அம்லோடிபைனை எடுத்துக் கொள்ளும் நேரம் வந்துவிட்டது.",
   "appointment": "முன்பதிவு",
@@ -102,5 +99,9 @@
   "signUp": "பதிவு செய்யவும்",
   "medications": "மருந்துகள்",
   "noMedications": "மருந்துகள் இல்லை",
-  "noAllergies": "அலர்ஜிகள் இல்லை"
+  "noAllergies": "அலர்ஜிகள் இல்லை",
+  "deleteAccountDescription": "உங்கள் கணக்கை நீக்குவது மூலம் உங்கள் தனிப்பட்ட தகவல்கள் நிரந்தரமாக நீக்கப்படும்.",
+  "deleteAccountConfirmation": "தயவுசெய்து, உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா என்பதை உறுதிப்படுத்தவும்.",
+  "nic": "தேசிய அடையாள அட்டை",
+  "password": "கடவுச்சொல்"
 }
