--- a/axion/project 3/flutter_application_1/lib/l10n/app_si.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_si.arb
@@ -1,107 +1,117 @@
 {
   "@@locale": "si",
   "welcome": "සාදරයෙන් පිළිගනිමු",
-  "tapToSeeFullList": "පූර්ණ ලැයිස්තුව දැක්කීමට ටැප් කරන්න",
+  "tapToSeeFullList": "සම්පූර්ණ ලැයිස්තුව බැලීමට ඔබන්න",
   "medication": "ඖෂධ",
-  "allergies": "ආතතතා",
+  "allergies": "ආසාත්මිකතා",
   "settings": "සැකසුම්",
   "language": "භාෂාව",
   "darkMode": "අඳුරු මාදිලිය",
   "settingsTitle": "සැකසුම්",
   "languageLabel": "භාෂාව",
-  "deleteConfirmationMsg": "ඔබගේ ගිණුම මැකීමට විශ්වාසද? මෙම ක්‍රියාව ආපසු ලබාගත නොහැක.",
+  "deleteConfirmationMsg": "ඔබගේ ගිණුම මකා දැමීමට අවශ්‍ය බව විශ්වාසද? මෙම ක්‍රියාව ආපසු හැරවිය නොහැක.",
   "no": "නැත",
   "yes": "ඔව්",
-  "deleteAccount": "ගිණුම මකාදමන්න",
-  "confirmDeletion": "මකාදැමීම තහවුරු කරන්න",
-  "passwordChanged": "ඔබගේ මුරපදය සාර්ථකව වෙනස් කරන ලදී.",
+  "deleteAccount": "ගිණුම මකන්න",
+  "confirmDeletion": "මකා දැමීම තහවුරු කරන්න",
+  "passwordChanged": "ඔබගේ මුරපදය සාර්ථකව වෙනස් කර ඇත.",
   "changePassword": "මුරපදය වෙනස් කරන්න",
   "confirm": "තහවුරු කරන්න",
   "cancel": "අවලංගු කරන්න",
   "profile": "පැතිකඩ",
   "username": "පරිශීලක නාමය",
-  "email": "විද්‍යුත් තැපෑල",
-  "phone": "දුරකථන අංකය",
-  "logout": "පිටවීම",
-  "logoutMessage": "ඔබට පිටවීමට අවශ්‍යද?",
+  "email": "විද්‍යුත් තැපැල්",
+  "phone": "දුරකථන",
+  "logout": "ඉවත් වන්න",
+  "logoutMessage": "ඔබට ඉවත් වීමට අවශ්‍ය බව විශ්වාසද?",
   "editDetails": "විස්තර සංස්කරණය කරන්න",
   "saveChanges": "වෙනස්කම් සුරකින්න",
-  "noChangesMade": "කිසිඳු වෙනස්කම් කර නොමැත.",
-  "confirmChanges": "ඔබට මෙම වෙනස්කම් සුරැකීමට විශ්වාසද?",
+  "noChangesMade": "කිසිදු වෙනසක් සිදු කර නැත.",
+  "confirmChanges": "මෙම වෙනස්කම් සුරැකීමට අවශ්‍ය බව විශ්වාසද?",
   "selectDate": "දිනය තෝරන්න",
   "myReports": "මගේ වාර්තා",
-  "noReportsForYear": "මෙම වසර සඳහා වාර්තා නොමැත.",
-  "recentReports": "මෑතකදී සුරැකූ වාර්තා",
+  "noReportsForYear": "මෙම වසර සඳහා වාර්තා සොයා ගත නොහැක.",
+  "recentReports": "මෑතකදී සුරැකි වාර්තා",
   "noReportsForDate": "මෙම දිනය සඳහා වාර්තා නොමැත.",
-  "noReportsFound": "වාර්තා සොයාගත නොහැක.",
+  "noReportsFound": "වාර්තා සොයා ගත නොහැක.",
   "noReports": "වාර්තා නොමැත.",
-  "noMedicalAlerts": "ඉදිරි වෛද්‍ය දැනුම්දීම් නොමැත.",
+  "noMedicalAlerts": "ඉදිරි ඖෂධ ඇඟවීම් නොමැත.",
   "noNewNotifications": "ඔබට නව දැනුම්දීම් නොමැත.",
   "notifications": "දැනුම්දීම්",
-  "medicationReminder": "ඖෂධ මතක් කිරීම",
-  "medicationReminderDescription": "ඔබගේ ඇමොක්සිලිනය ගැනීමට කාලය නුදුරේයි.",
-  "appointment": "වෙන්කිරීම",
-  "appointmentDescription": "ඔබට හෙට පස්වරු 3.00 ට වෛද්‍ය වෙන්කිරීමක් ඇත.",
+  "medicationReminder": "ඖෂධ සිහිකැඳවීම",
+  "medicationReminderDescription": "ඔබගේ Amlodipine ගැනීමට කාලය පැමිණ ඇත.",
+  "appointment": "හමුවීම",
+  "appointmentDescription": "හෙට ප.ව. 3:00ට වෛද්‍ය හමුව ඇත.",
   "medicalNotifications": "වෛද්‍ය දැනුම්දීම්",
   "reports": "වාර්තා",
   "homeTitle": "සාදරයෙන් පිළිගනිමු {name}",
+  "status": "තත්ත්වය",
+  "date": "දිනය",
+  "time": "වේලාව",
   "ok": "හරි",
-  "deleteMessage": "ඔබගේ ගිණුම මැකීමට විශ්වාසද?",
-  "appTitle": "ඔබගේ වෛද්‍යවරයා සමඟ සම්බන්ධ වන්න",
-  "scanToConnect": "සම්බන්ධ වීමට ස්කෑන් කරන්න",
-  "instructionText": "ඔබගේ වෛද්‍යවරයා සමඟ ආරක්ෂිතව සම්බන්ධ වීමට කරුණාකර QR කේතය ස්කෑන් කරන්න.",
+  "deleteMessage": "ඔබගේ ගිණුම මකා දැමීමට අවශ්‍ය බව විශ්වාසද?",
+  "appTitle": "ඔබේ වෛද්‍යවරයා සමඟ සම්බන්ධ වන්න",
+  "scanToConnect": "සම්බන්ධ වීමට QR කේතය ස්කෑන් කරන්න",
+  "instructionText": "ඔබේ වෛද්‍යවරයා සමඟ ආරක්ෂිතව සම්බන්ධ වීමට QR කේතය ස්කෑන් කරන්න.",
   "shareButton": "ආරක්ෂිතව බෙදාගන්න",
   "log": "පද්ධති ලොග්",
   "downloadedReports": "බාගත කළ වාර්තා",
-  "noDownloadedReports": "බාගත කළ වාර්තා නැත",
-  "reportDeleted": "වාර්තාව සාර්ථකව මකා දමන ලදී",
+  "noDownloadedReports": "බාගත කළ වාර්තා නොමැත",
+  "reportDeleted": "වාර්තාව සාර්ථකව මකා දමා ඇත",
   "medicalRecords": "වෛද්‍ය වාර්තා",
-  "error": "දෝෂය",
-  "reminders": "මතක් කිරීම්",
+  "error": "දෝෂයකි",
+  "reminders": "සිහිකැඳවීම්",
   "recentNotifications": "මෑත දැනුම්දීම්",
   "retry": "නැවත උත්සාහ කරන්න",
-  "noLinksAvailable": "ලබා ගත හැකි සබැඳි නොමැත",
+  "noLinksAvailable": "සබැඳි නොමැත",
   "location": "ස්ථානය",
   "user": "පරිශීලක",
-  "action": "ක්‍රියා",
+  "action": "ක්‍රියාව",
   "additionalDetails": "අමතර විස්තර",
   "addMedication": "ඖෂධ එකතු කරන්න",
-  "medicationName": "ඖෂධ නාමය",
-  "medicationNameRequired": "ඖෂධ නාමය අවශ්‍ය වේ",
+  "medicationName": "ඖෂධයේ නම",
+  "medicationNameRequired": "ඖෂධයේ නම අවශ්‍යයි",
   "add": "එකතු කරන්න",
   "editMedication": "ඖෂධ සංස්කරණය කරන්න",
   "save": "සුරකින්න",
   "deleteAllNotifications": "සියලු දැනුම්දීම් මකන්න",
-  "deleteAllNotificationsConfirm": "සියලු දැනුම්දීම් මකීමට ඔබට විශ්වාසද?",
+  "deleteAllNotificationsConfirm": "සියලු දැනුම්දීම් මකා දැමීමට අවශ්‍ය බව විශ්වාසද?",
   "delete": "මකන්න",
-  "markAllAsRead": "සියල්ල කියවූ බව සදහන් කරන්න",
+  "markAllAsRead": "සියල්ල කියවූ ලෙස සලකුණු කරන්න",
   "noNotifications": "දැනුම්දීම් නොමැත",
-  "markAsRead": "කියවූ බව සදහන් කරන්න",
-  "phoneRequired": "දුරකථන අංකය අවශ්‍ය වේ",
-  "invalidEmail": "අවලංගු විද්‍යුත් තැපෑල",
-  "emailRequired": "විද්‍යුත් තැපෑල අවශ්‍ය වේ",
-  "lastNameRequired": "අවසන් නාමය අවශ්‍ය වේ",
-  "lastName": "අවසන් නාමය",
-  "firstNameRequired": "මුල් නාමය අවශ්‍ය වේ",
-  "firstName": "මුල් නාමය",
-  "name": "නාමය",
-  "notificationPreferences": "දැනුම්දීම් කැමැත්ත",
-  "privacySettings": "ගෝපනීය සැකසුම්",
-  "deleteAccountWarning": "ඔබගේ ගිණුම මකීමෙන් සියලු දත්ත ස්ථිරව මකයි",
-  "allFieldsRequired": "සියලු ක්ෂේත්‍ර අවශ්‍ය වේ",
-  "passwordsDoNotMatch": "මුරපද නොගැලපෙයි",
+  "markAsRead": "කියවූ ලෙස සලකුණු කරන්න",
+  "phoneRequired": "දුරකථන අංකය අවශ්‍යයි",
+  "invalidEmail": "වලංගු නොවන විද්‍යුත් තැපැල් ලිපිනයකි",
+  "emailRequired": "විද්‍යුත් තැපැල් ලිපිනය අවශ්‍යයි",
+  "lastNameRequired": "අවසන් නම අවශ්‍යයි",
+  "lastName": "අවසන් නම",
+  "firstNameRequired": "මුල් නම අවශ්‍යයි",
+  "firstName": "මුල් නම",
+  "name": "නම",
+  "notificationPreferences": "දැනුම්දීම් මනාප",
+  "privacySettings": "රහස්‍යතා සැකසුම්",
+  "deleteAccountWarning": "ඔබගේ ගිණුම මකා දැමීමෙන් සියලු දත්ත ස්ථිරවම ඉවත් වේ",
+  "allFieldsRequired": "සියලු ක්ෂේත්‍ර අවශ්‍යයි",
+  "passwordsDoNotMatch": "මුරපද නොගැලපේ",
   "success": "සාර්ථකයි",
-  "passwordChangeSuccess": "මුරපදය සාර්ථකව වෙනස් කරන ලදී",
-  "currentPassword": "වත්මන් මුරපදය",
+  "passwordChangeSuccess": "මුරපදය සාර්ථකව වෙනස් කර ඇත",
+  "currentPassword": "වර්තමාන මුරපදය",
   "newPassword": "නව මුරපදය",
   "confirmNewPassword": "නව මුරපදය තහවුරු කරන්න",
   "signUpSuccess": "ලියාපදිංචිය සාර්ථකයි",
   "signUp": "ලියාපදිංචි වන්න",
   "medications": "ඖෂධ",
   "noMedications": "ඖෂධ නොමැත",
-  "noAllergies": "ආතතතා නොමැත",
-  "deleteAccountDescription": "ඔබගේ ගිණුම මකා දැමීමෙන් ඔබගේ සියලු පුද්ගලික දත්ත ස්ථිරව මකනු ලැබේ.",
-  "deleteAccountConfirmation": "කරුණාකර ඔබගේ ගිණුම මකා දැමීමට ඔබ විශ්වාස කරනවාදැයි තහවුරු කරන්න.",
-  "nic": "ජාතික හැදුනුම්පත",
-  "password": "මුරපදය"
+  "noAllergies": "ආසාත්මිකතා නොමැත",
+  "deleteAccountDescription": "ඔබගේ ගිණුම මකා දැමීමෙන් ඔබගේ සියලුම පුද්ගලික දත්ත ස්ථිරවම ඉවත් වේ.",
+  "deleteAccountConfirmation": "ඔබගේ ගිණුම මකා දැමීමට අවශ්‍ය බව තහවුරු කරන්න.",
+  "nic": "ජාතික හැඳුනුම්පත් අංකය",
+  "password": "මුරපදය",
+  "privacy": "රහස්‍යතාව",
+  "pushNotifications": "තල්ලු දැනුම්දීම්",
+  "emailNotifications": "විද්‍යුත් තැපැල් දැනුම්දීම්",
+  "medicalAlerts": "වෛද්‍ය ඇඟවීම්",
+  "shareProfile": "පැතිකඩ බෙදාගන්න",
+  "showActivity": "ක්‍රියාකාරකම් පෙන්වන්න",
+  "allowRecommendations": "නිර්දේශ අවසර දෙන්න"
 }
