--- a/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
@@ -1,85 +1,88 @@
 {
   "@@locale": "ta",
   "welcome": "வரவேற்கிறோம்",
-  "tapToSeeFullList": "முழு பட்டியலை காண தட்டவும்",
-  "medication": "மருந்துகள்",
-  "allergies": "அலர்ஜிகள்",
+  "tapToSeeFullList": "முழு பட்டியலைப் பார்க்க தட்டவும்",
+  "medication": "மருந்து",
+  "allergies": "ஒவ்வாமைகள்",
   "settings": "அமைப்புகள்",
   "language": "மொழி",
-  "darkMode": "இருண்ட நிலை",
+  "darkMode": "இருள் பயன்முறை",
   "settingsTitle": "அமைப்புகள்",
   "languageLabel": "மொழி",
-  "deleteConfirmationMsg": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா? இந்த செயல்பாட்டை மீட்டமைக்க முடியாது.",
+  "deleteConfirmationMsg": "உங்கள் கணக்கை நிச்சயமாக நீக்க விரும்புகிறீர்களா? இந்த செயலை மீட்டெடுக்க முடியாது.",
   "no": "இல்லை",
   "yes": "ஆம்",
   "deleteAccount": "கணக்கை நீக்கு",
-  "confirmDeletion": "நீக்கலை உறுதிப்படுத்தவும்",
+  "confirmDeletion": "நீக்குதலை உறுதிப்படுத்து",
   "passwordChanged": "உங்கள் கடவுச்சொல் வெற்றிகரமாக மாற்றப்பட்டது.",
   "changePassword": "கடவுச்சொல்லை மாற்று",
-  "confirm": "உறுதிப்படுத்தவும்",
+  "confirm": "உறுதிப்படுத்து",
   "cancel": "ரத்து செய்",
   "profile": "சுயவிவரம்",
-  "username": "பயனர் பெயர்",
+  "username": "பயனர்பெயர்",
   "email": "மின்னஞ்சல்",
   "phone": "தொலைபேசி",
   "logout": "வெளியேறு",
-  "logoutMessage": "நீங்கள் வெளியேற விரும்புகிறீர்களா?",
-  "editDetails": "விவரங்களைத் திருத்து",
-  "saveChanges": "மாற்றங்களைச் சேமிக்கவும்",
+  "logoutMessage": "நிச்சயமாக வெளியேற விரும்புகிறீர்களா?",
+  "editDetails": "விவரங்களை திருத்து",
+  "saveChanges": "மாற்றங்களை சேமி",
   "noChangesMade": "எந்த மாற்றங்களும் செய்யப்படவில்லை.",
-  "confirmChanges": "நீங்கள் இந்த மாற்றங்களைச் சேமிக்க விரும்புகிறீர்களா?",
+  "confirmChanges": "மாற்றங்களை சேமிக்க விரும்புகிறீர்களா?",
   "selectDate": "தேதியைத் தேர்ந்தெடுக்கவும்",
-  "myReports": "என் அறிக்கைகள்",
-  "noReportsForYear": "இந்த ஆண்டிற்கான அறிக்கைகள் இல்லை.",
-  "recentReports": "சமீபத்தில் சேமிக்கப்பட்ட அறிக்கைகள்",
+  "myReports": "எனது அறிக்கைகள்",
+  "noReportsForYear": "இந்த ஆண்டிற்கான அறிக்கைகள் எதுவும் இல்லை.",
+  "recentReports": "சமீபத்திய அறிக்கைகள்",
   "noReportsForDate": "இந்த தேதிக்கு அறிக்கைகள் இல்லை.",
-  "noReportsFound": "அறிக்கைகள் இல்லை.",
+  "noReportsFound": "அறிக்கைகள் எதுவும் கிடைக்கவில்லை.",
   "noReports": "அறிக்கைகள் இல்லை.",
-  "noMedicalAlerts": "எதிர்வரும் மருத்துவ அறிவிப்புகள் இல்லை.",
-  "noNewNotifications": "உங்களிடம் புதிய அறிவிப்புகள் இல்லை.",
+  "noMedicalAlerts": "வரவிருக்கும் மருத்துவ எச்சரிக்கைகள் இல்லை.",
+  "noNewNotifications": "புதிய அறிவிப்புகள் எதுவும் இல்லை.",
   "notifications": "அறிவிப்புகள்",
   "medicationReminder": "மருந்து நினைவூட்டல்",
-  "medicationReminderDescription": "உங்கள் அம்லோடிபைனை எடுத்துக் கொள்ளும் நேரம் வந்துவிட்டது.",
-  "appointment": "முன்பதிவு",
-  "appointmentDescription": "நாளைக்கு மாலை 3:00 மணிக்கு உங்களுக்கு மருத்துவர் சந்திப்பு உள்ளது.",
+  "medicationReminderDescription": "உங்கள் Amlodipine எடுக்கும் நேரம் நெருங்கிவிட்டது.",
+  "appointment": "சந்திப்பு",
+  "appointmentDescription": "நாளை மாலை 3:00 மணிக்கு மருத்துவர் சந்திப்பு உள்ளது.",
   "medicalNotifications": "மருத்துவ அறிவிப்புகள்",
   "reports": "அறிக்கைகள்",
   "homeTitle": "வரவேற்கிறோம் {name}",
+  "status": "நிலை",
+  "date": "தேதி",
+  "time": "நேரம்",
   "ok": "சரி",
   "deleteMessage": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா?",
-  "appTitle": "உங்கள் மருத்துவருடன் இணைக்கவும்",
-  "scanToConnect": "இணைக்க ஸ்கேன் செய்யவும்",
-  "instructionText": "உங்கள் மருத்துவருடன் பாதுகாப்பாக இணைவதற்காக தயவுசெய்து QR குறியீட்டை ஸ்கேன் செய்யவும்.",
-  "shareButton": "பாதுகாப்பாக பகிரவும்",
+  "appTitle": "உங்கள் மருத்துவருடன் இணையுங்கள்",
+  "scanToConnect": "இணைக்க QR குறியீட்டை ஸ்கேன் செய்யவும்",
+  "instructionText": "உங்கள் மருத்துவருடன் பாதுகாப்பாக இணைய QR குறியீட்டை ஸ்கேன் செய்யவும்.",
+  "shareButton": "பாதுகாப்பாக பகிர்",
   "log": "கணினி பதிவுகள்",
-  "downloadedReports": "பதிவிறக்கப்பட்ட அறிக்கைகள்",
-  "noDownloadedReports": "பதிவிறக்கப்பட்ட அறிக்கைகள் இல்லை",
+  "downloadedReports": "பதிவிறக்கிய அறிக்கைகள்",
+  "noDownloadedReports": "பதிவிறக்கிய அறிக்கைகள் இல்லை",
   "reportDeleted": "அறிக்கை வெற்றிகரமாக நீக்கப்பட்டது",
   "medicalRecords": "மருத்துவ பதிவுகள்",
   "error": "பிழை",
   "reminders": "நினைவூட்டல்கள்",
   "recentNotifications": "சமீபத்திய அறிவிப்புகள்",
-  "retry": "மீண்டும் முயற்சி செய்க",
-  "noLinksAvailable": "இணைப்புகள் கிடைக்கவில்லை",
+  "retry": "மீண்டும் முயற்சிக்கவும்",
+  "noLinksAvailable": "இணைப்புகள் இல்லை",
   "location": "இடம்",
   "user": "பயனர்",
-  "action": "நடவடிக்கை",
+  "action": "செயல்",
   "additionalDetails": "கூடுதல் விவரங்கள்",
-  "addMedication": "மருந்து சேர்க்கவும்",
-  "medicationName": "மருந்து பெயர்",
-  "medicationNameRequired": "மருந்து பெயர் தேவை",
+  "addMedication": "மருந்து சேர்",
+  "medicationName": "மருந்தின் பெயர்",
+  "medicationNameRequired": "மருந்தின் பெயர் தேவை",
   "add": "சேர்",
-  "editMedication": "மருந்தை திருத்தவும்",
+  "editMedication": "மருந்தை திருத்து",
   "save": "சேமி",
   "deleteAllNotifications": "அனைத்து அறிவிப்புகளையும் நீக்கு",
   "deleteAllNotificationsConfirm": "அனைத்து அறிவிப்புகளையும் நீக்க விரும்புகிறீர்களா?",
   "delete": "நீக்கு",
-  "markAllAsRead": "அனைத்தையும் வாசிக்கப்பட்டதாகக் குறி",
+  "markAllAsRead": "அனைத்தையும் படித்ததாக குறி",
   "noNotifications": "அறிவிப்புகள் இல்லை",
-  "markAsRead": "வாசிக்கப்பட்டதாக குறி",
-  "phoneRequired": "தொலைபேசி தேவை",
-  "invalidEmail": "தவறான மின்னஞ்சல்",
-  "emailRequired": "மின்னஞ்சல் தேவை",
+  "markAsRead": "படித்ததாக குறி",
+  "phoneRequired": "தொலைபேசி எண் தேவை",
+  "invalidEmail": "தவறான மின்னஞ்சல் முகவரி",
+  "emailRequired": "மின்னஞ்சல் முகவரி தேவை",
   "lastNameRequired": "கடைசி பெயர் தேவை",
   "lastName": "கடைசி பெயர்",
   "firstNameRequired": "முதல் பெயர் தேவை",
@@ -87,21 +90,28 @@
   "name": "பெயர்",
   "notificationPreferences": "அறிவிப்பு விருப்பங்கள்",
   "privacySettings": "தனியுரிமை அமைப்புகள்",
-  "deleteAccountWarning": "உங்கள் கணக்கை நீக்குவதால் அனைத்து தரவுகளும் நிரந்தரமாக நீக்கப்படும்",
+  "deleteAccountWarning": "உங்கள் கணக்கை நீக்குவது அனைத்து தரவையும் நிரந்தரமாக அகற்றும்",
   "allFieldsRequired": "அனைத்து புலங்களும் தேவை",
   "passwordsDoNotMatch": "கடவுச்சொற்கள் பொருந்தவில்லை",
   "success": "வெற்றி",
   "passwordChangeSuccess": "கடவுச்சொல் வெற்றிகரமாக மாற்றப்பட்டது",
   "currentPassword": "தற்போதைய கடவுச்சொல்",
   "newPassword": "புதிய கடவுச்சொல்",
-  "confirmNewPassword": "புதிய கடவுச்சொல்லை உறுதிப்படுத்தவும்",
-  "signUpSuccess": "பதிவு வெற்றிகரமாக முடிந்தது",
-  "signUp": "பதிவு செய்யவும்",
+  "confirmNewPassword": "புதிய கடவுச்சொல்லை உறுதிப்படுத்து",
+  "signUpSuccess": "பதிவு வெற்றிகரமானது",
+  "signUp": "பதிவு செய்",
   "medications": "மருந்துகள்",
   "noMedications": "மருந்துகள் இல்லை",
-  "noAllergies": "அலர்ஜிகள் இல்லை",
-  "deleteAccountDescription": "உங்கள் கணக்கை நீக்குவது மூலம் உங்கள் தனிப்பட்ட தகவல்கள் நிரந்தரமாக நீக்கப்படும்.",
-  "deleteAccountConfirmation": "தயவுசெய்து, உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா என்பதை உறுதிப்படுத்தவும்.",
-  "nic": "தேசிய அடையாள அட்டை",
-  "password": "கடவுச்சொல்"
+  "noAllergies": "ஒவ்வாமைகள் இல்லை",
+  "deleteAccountDescription": "உங்கள் கணக்கை நீக்குவது உங்கள் அனைத்து தனிப்பட்ட தரவையும் நிரந்தரமாக அகற்றும்.",
+  "deleteAccountConfirmation": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்கள் என்பதை உறுதிப்படுத்தவும்.",
+  "nic": "தேசிய அடையாள அட்டை எண்",
+  "password": "கடவுச்சொல்",
+  "privacy": "தனியுரிமை",
+  "pushNotifications": "புஷ் அறிவிப்புகள்",
+  "emailNotifications": "மின்னஞ்சல் அறிவிப்புகள்",
+  "medicalAlerts": "மருத்துவ எச்சரிக்கைகள்",
+  "shareProfile": "சுயவிவரத்தை பகிர்",
+  "showActivity": "செயல்பாட்டைக் காட்டு",
+  "allowRecommendations": "பரிந்துரைகளை அனுமதி"
 }
