Integrated GraphQL for Medicines, Allergies, Immunizations

--- a/axion-patient_portal/src/locales/en.json
+++ b/axion-patient_portal/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "Welcome back, John Doe! Here’s your health summary.",
+  "welcomeMessage": "Welcome ",
   "basicHealthInformation": "Basic Health Information",
   "name": "Name",
   "age": "Age",
