--- a/axion-patient_portal/src/locales/si.json
+++ b/axion-patient_portal/src/locales/si.json
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "ආයුබෝවන්, John Doe! මෙන්න ඔබේ සෞඛ්‍ය සාරාංශය.",
+  "welcomeMessage": "ආයුබෝවන්",
   "basicHealthInformation": "මූලික සෞඛ්‍ය තොරතුරු",
   "name": "නම",
   "age": "වයස",
