--- a/axion/project 3/flutter_application_1/lib/l10n/app_en.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_en.arb
@@ -113,5 +113,80 @@
   "medicalAlerts": "Medical Alerts",
   "shareProfile": "Share Profile",
   "showActivity": "Show Activity",
-  "allowRecommendations": "Allow Recommendations"
+  "allowRecommendations": "Allow Recommendations",
+  "loginTitle": "Login",
+  "emailLabel": "Email",
+  "passwordLabel": "Password",
+  "loginButton": "Login",
+  "emailValidationEmpty": "Please enter your email",
+  "emailValidationInvalid": "Please enter a valid email address",
+  "passwordValidationEmpty": "Please enter your password",
+  "passwordValidationLength": "Password must be at least 8 characters",
+  "noInternetError": "No internet connection. Please check your network and try again.",
+  "unexpectedError": "An unexpected error occurred. Please try again.",
+  "loginFailed": "Login failed",
+  "loginImage": "Login image",
+  "showPassword": "Show password",
+  "hidePassword": "Hide password",
+  "appName": "AXION",
+  "signupButton": "Signup",
+  "splashScreenLogo": "App logo",
+  "signupStepOneImage": "Step one image",
+  "signupStepOneTagline": "Stay informed, stay healthy.",
+  "signupStepTwoImage": "Step two image",
+  "signupStepTwoTagline": "Easy access to your medical information.",
+  "signupStepThreeImage": "Step three image",
+  "enterOtp": "Enter OTP",
+  "enterOtpHint": "Enter the 6-digit OTP",
+  "otpRequired": "OTP is required",
+  "invalidOtpFormat": "Please enter a valid 6-digit OTP",
+  "verify": "Verify",
+  "resendOtp": "Resend OTP",
+  "resending": "Resending...",
+  "resendOtpFailed": "Failed to resend OTP",
+  "otpResent": "OTP resent successfully",
+  "invalidOtp": "Invalid OTP",
+  "signupSuccess": "Signup successful!",
+  "signupFailed": "Failed to create account",
+  "alreadyHaveAccount": "Already have an account? ",
+  "next": "Next",
+  "signupTagline": "Stay informed, stay healthy.",
+  "nameValidation": "Please enter letters only",
+  "loginErrorIncorrectPassword": "Incorrect password. Please try again.",
+  "loginErrorAccountNotFound": "Account not found. Please check your email or sign up.",
+  "loginErrorVerifyEmail": "Please verify your email before logging in.",
+  "signupStepTwoImage": "Step two image",
+  "signupStepTwoTagline": "Easy access to your medical information.",
+  "nicRequired": "NIC number is required",
+  "dobHint": "Date of Birth (MM/DD/YYYY)",
+  "dobRequired": "Date of Birth is required",
+  "dobInvalidFormat": "Please enter a valid date (MM/DD/YYYY)",
+  "phoneInvalid": "Please enter a valid 10-digit phone number",
+  "passwordValidationUpper": "Password must contain at least one uppercase letter",
+  "passwordValidationLower": "Password must contain at least one lowercase letter",
+  "passwordValidationNumber": "Password must contain at least one number",
+  "passwordValidationSpecial": "Password must contain at least one special character",
+  "signupStep1Incomplete": "Please complete Step 1 first",
+  "otpSendFailed": "Failed to send OTP",
+  "errorPrefix": "Error: ",
+  "noReminders": "No reminders",
+  "immunizations": "Immunizations",
+  "moreCount": "+{count} more",
+  "@moreCount": {
+    "description": "Shown in expandable section headers to indicate how many items are hidden",
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "3"
+      }
+    }
+  },
+  "noTitle": "No Title",
+  "noDetail": "No Detail",
+  "contactInfo": "Contact Information",
+  "personalInfo": "Personal Information",
+  "fullName": "Full Name",
+  "birthday": "Birthday",
+  "confirmLogout": "Confirm Logout",
+  "logoutFailed": "Logout failed"
 }
