--- a/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
+++ b/axion/project 3/flutter_application_1/lib/l10n/app_ta.arb
@@ -1,47 +1,47 @@
 {
   "@@locale": "ta",
   "welcome": "வரவேற்கிறோம்",
-  "tapToSeeFullList": "முழு பட்டியலைப் பார்க்க தட்டவும்",
-  "medication": "மருந்து",
-  "allergies": "ஒவ்வாமைகள்",
+  "tapToSeeFullList": "முழு பட்டியலை காண தட்டவும்",
+  "medication": "மருந்துகள்",
+  "allergies": "அலர்ஜிகள்",
   "settings": "அமைப்புகள்",
   "language": "மொழி",
-  "darkMode": "இருள் பயன்முறை",
+  "darkMode": "டார்க் மோடு",
   "settingsTitle": "அமைப்புகள்",
   "languageLabel": "மொழி",
-  "deleteConfirmationMsg": "உங்கள் கணக்கை நிச்சயமாக நீக்க விரும்புகிறீர்களா? இந்த செயலை மீட்டெடுக்க முடியாது.",
+  "deleteConfirmationMsg": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா? இந்த செயல் மாற்ற முடியாது.",
   "no": "இல்லை",
   "yes": "ஆம்",
   "deleteAccount": "கணக்கை நீக்கு",
-  "confirmDeletion": "நீக்குதலை உறுதிப்படுத்து",
+  "confirmDeletion": "நீக்கலை உறுதி செய்க",
   "passwordChanged": "உங்கள் கடவுச்சொல் வெற்றிகரமாக மாற்றப்பட்டது.",
   "changePassword": "கடவுச்சொல்லை மாற்று",
-  "confirm": "உறுதிப்படுத்து",
-  "cancel": "ரத்து செய்",
+  "confirm": "உறுதி செய்க",
+  "cancel": "ரத்து செய்க",
   "profile": "சுயவிவரம்",
   "username": "பயனர்பெயர்",
   "email": "மின்னஞ்சல்",
   "phone": "தொலைபேசி",
   "logout": "வெளியேறு",
-  "logoutMessage": "நிச்சயமாக வெளியேற விரும்புகிறீர்களா?",
+  "logoutMessage": "நீங்கள் வெளியேற விரும்புகிறீர்களா?",
   "editDetails": "விவரங்களை திருத்து",
-  "saveChanges": "மாற்றங்களை சேமி",
+  "saveChanges": "மாற்றங்களை சேமிக்கவும்",
   "noChangesMade": "எந்த மாற்றங்களும் செய்யப்படவில்லை.",
-  "confirmChanges": "மாற்றங்களை சேமிக்க விரும்புகிறீர்களா?",
+  "confirmChanges": "இந்த மாற்றங்களை சேமிக்க விரும்புகிறீர்களா?",
   "selectDate": "தேதியைத் தேர்ந்தெடுக்கவும்",
-  "myReports": "எனது அறிக்கைகள்",
-  "noReportsForYear": "இந்த ஆண்டிற்கான அறிக்கைகள் எதுவும் இல்லை.",
-  "recentReports": "சமீபத்திய அறிக்கைகள்",
+  "myReports": "என் அறிக்கைகள்",
+  "noReportsForYear": "இந்த ஆண்டுக்கான அறிக்கைகள் இல்லை.",
+  "recentReports": "சமீபத்தில் சேமிக்கப்பட்ட அறிக்கைகள்",
   "noReportsForDate": "இந்த தேதிக்கு அறிக்கைகள் இல்லை.",
-  "noReportsFound": "அறிக்கைகள் எதுவும் கிடைக்கவில்லை.",
+  "noReportsFound": "அறிக்கைகள் கிடைக்கவில்லை.",
   "noReports": "அறிக்கைகள் இல்லை.",
-  "noMedicalAlerts": "வரவிருக்கும் மருத்துவ எச்சரிக்கைகள் இல்லை.",
-  "noNewNotifications": "புதிய அறிவிப்புகள் எதுவும் இல்லை.",
+  "noMedicalAlerts": "எந்த மருந்து அலார்ட்டுகளும் இல்லை.",
+  "noNewNotifications": "புதிய அறிவிப்புகள் இல்லை.",
   "notifications": "அறிவிப்புகள்",
   "medicationReminder": "மருந்து நினைவூட்டல்",
-  "medicationReminderDescription": "உங்கள் Amlodipine எடுக்கும் நேரம் நெருங்கிவிட்டது.",
-  "appointment": "சந்திப்பு",
-  "appointmentDescription": "நாளை மாலை 3:00 மணிக்கு மருத்துவர் சந்திப்பு உள்ளது.",
+  "medicationReminderDescription": "உங்கள் அம்லோடிபைன் மருந்தை எடுத்துக்கொள்ள நேரம் ஆகிறது.",
+  "appointment": "நியமனம்",
+  "appointmentDescription": "நாளை 3:00 PM மணிக்கு மருத்துவர் சந்திப்பு உள்ளது.",
   "medicalNotifications": "மருத்துவ அறிவிப்புகள்",
   "reports": "அறிக்கைகள்",
   "homeTitle": "வரவேற்கிறோம் {name}",
@@ -50,39 +50,39 @@
   "time": "நேரம்",
   "ok": "சரி",
   "deleteMessage": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா?",
-  "appTitle": "உங்கள் மருத்துவருடன் இணையுங்கள்",
-  "scanToConnect": "இணைக்க QR குறியீட்டை ஸ்கேன் செய்யவும்",
-  "instructionText": "உங்கள் மருத்துவருடன் பாதுகாப்பாக இணைய QR குறியீட்டை ஸ்கேன் செய்யவும்.",
-  "shareButton": "பாதுகாப்பாக பகிர்",
+  "appTitle": "உங்கள் மருத்துவருடன் இணைக்கவும்",
+  "scanToConnect": "இணைக்க ஸ்கேன் செய்யவும்",
+  "instructionText": "உங்கள் மருத்துவருடன் பாதுகாப்பாக இணைக்க QR குறியீட்டை ஸ்கேன் செய்யவும்.",
+  "shareButton": "பாதுகாப்பாக பகிரவும்",
   "log": "கணினி பதிவுகள்",
-  "downloadedReports": "பதிவிறக்கிய அறிக்கைகள்",
-  "noDownloadedReports": "பதிவிறக்கிய அறிக்கைகள் இல்லை",
+  "downloadedReports": "பதிவிறக்கப்பட்ட அறிக்கைகள்",
+  "noDownloadedReports": "பதிவிறக்கப்பட்ட அறிக்கைகள் இல்லை",
   "reportDeleted": "அறிக்கை வெற்றிகரமாக நீக்கப்பட்டது",
   "medicalRecords": "மருத்துவ பதிவுகள்",
   "error": "பிழை",
   "reminders": "நினைவூட்டல்கள்",
-  "recentNotifications": "சமீபத்திய அறிவிப்புகள்",
-  "retry": "மீண்டும் முயற்சிக்கவும்",
-  "noLinksAvailable": "இணைப்புகள் இல்லை",
+  "recentNotifications": "சமீப அறிவிப்புகள்",
+  "retry": "மீண்டும் முயற்சி செய்க",
+  "noLinksAvailable": "இணைப்புகள் கிடைக்கவில்லை",
   "location": "இடம்",
   "user": "பயனர்",
   "action": "செயல்",
   "additionalDetails": "கூடுதல் விவரங்கள்",
-  "addMedication": "மருந்து சேர்",
+  "addMedication": "மருந்தை சேர்",
   "medicationName": "மருந்தின் பெயர்",
   "medicationNameRequired": "மருந்தின் பெயர் தேவை",
   "add": "சேர்",
   "editMedication": "மருந்தை திருத்து",
-  "save": "சேமி",
-  "deleteAllNotifications": "அனைத்து அறிவிப்புகளையும் நீக்கு",
-  "deleteAllNotificationsConfirm": "அனைத்து அறிவிப்புகளையும் நீக்க விரும்புகிறீர்களா?",
+  "save": "சேமிக்கவும்",
+  "deleteAllNotifications": "அறிவிப்புகளை அனைத்தையும் நீக்கு",
+  "deleteAllNotificationsConfirm": "அறிவிப்புகளை அனைத்தையும் நீக்க விரும்புகிறீர்களா?",
   "delete": "நீக்கு",
-  "markAllAsRead": "அனைத்தையும் படித்ததாக குறி",
+  "markAllAsRead": "அனைத்தையும் படித்ததாக குறிக்கவும்",
   "noNotifications": "அறிவிப்புகள் இல்லை",
-  "markAsRead": "படித்ததாக குறி",
-  "phoneRequired": "தொலைபேசி எண் தேவை",
-  "invalidEmail": "தவறான மின்னஞ்சல் முகவரி",
-  "emailRequired": "மின்னஞ்சல் முகவரி தேவை",
+  "markAsRead": "படித்ததாக குறிக்கவும்",
+  "phoneRequired": "தொலைபேசி தேவை",
+  "invalidEmail": "தவறான மின்னஞ்சல்",
+  "emailRequired": "மின்னஞ்சல் தேவை",
   "lastNameRequired": "கடைசி பெயர் தேவை",
   "lastName": "கடைசி பெயர்",
   "firstNameRequired": "முதல் பெயர் தேவை",
@@ -90,28 +90,105 @@
   "name": "பெயர்",
   "notificationPreferences": "அறிவிப்பு விருப்பங்கள்",
   "privacySettings": "தனியுரிமை அமைப்புகள்",
-  "deleteAccountWarning": "உங்கள் கணக்கை நீக்குவது அனைத்து தரவையும் நிரந்தரமாக அகற்றும்",
+  "deleteAccountWarning": "உங்கள் கணக்கை நீக்குவது அனைத்து தரவுகளையும் நிரந்தரமாக அகற்றும்",
   "allFieldsRequired": "அனைத்து புலங்களும் தேவை",
   "passwordsDoNotMatch": "கடவுச்சொற்கள் பொருந்தவில்லை",
   "success": "வெற்றி",
   "passwordChangeSuccess": "கடவுச்சொல் வெற்றிகரமாக மாற்றப்பட்டது",
   "currentPassword": "தற்போதைய கடவுச்சொல்",
   "newPassword": "புதிய கடவுச்சொல்",
-  "confirmNewPassword": "புதிய கடவுச்சொல்லை உறுதிப்படுத்து",
-  "signUpSuccess": "பதிவு வெற்றிகரமானது",
-  "signUp": "பதிவு செய்",
+  "confirmNewPassword": "புதிய கடவுச்சொல்லை உறுதி செய்க",
+  "signUpSuccess": "பதிவு வெற்றிகரமாக முடிந்தது",
+  "signUp": "பதிவு செய்க",
   "medications": "மருந்துகள்",
   "noMedications": "மருந்துகள் இல்லை",
-  "noAllergies": "ஒவ்வாமைகள் இல்லை",
-  "deleteAccountDescription": "உங்கள் கணக்கை நீக்குவது உங்கள் அனைத்து தனிப்பட்ட தரவையும் நிரந்தரமாக அகற்றும்.",
-  "deleteAccountConfirmation": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்கள் என்பதை உறுதிப்படுத்தவும்.",
-  "nic": "தேசிய அடையாள அட்டை எண்",
+  "noAllergies": "அலர்ஜிகள் இல்லை",
+  "deleteAccountDescription": "உங்கள் கணக்கை நீக்குவது உங்கள் தனிப்பட்ட தரவுகளை நிரந்தரமாக அகற்றும்.",
+  "deleteAccountConfirmation": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா என்பதை உறுதி செய்க.",
+  "nic": "திாு அடையாள எண்",
   "password": "கடவுச்சொல்",
   "privacy": "தனியுரிமை",
   "pushNotifications": "புஷ் அறிவிப்புகள்",
   "emailNotifications": "மின்னஞ்சல் அறிவிப்புகள்",
   "medicalAlerts": "மருத்துவ எச்சரிக்கைகள்",
-  "shareProfile": "சுயவிவரத்தை பகிர்",
-  "showActivity": "செயல்பாட்டைக் காட்டு",
-  "allowRecommendations": "பரிந்துரைகளை அனுமதி"
+  "shareProfile": "சுயவிவரத்தை பகிரவும்",
+  "showActivity": "செயல்பாட்டைக் காண்பி",
+  "allowRecommendations": "பரிந்துரைகளை அனுமதி",
+  "loginTitle": "உள்நுழை",
+  "emailLabel": "மின்னஞ்சல்",
+  "passwordLabel": "கடவுச்சொல்",
+  "loginButton": "உள்நுழைய",
+  "emailValidationEmpty": "மின்னஞ்சலை உள்ளிடவும்",
+  "emailValidationInvalid": "சரியான மின்னஞ்சலை உள்ளிடவும்",
+  "passwordValidationEmpty": "கடவுச்சொல்லை உள்ளிடவும்",
+  "passwordValidationLength": "கடவுச்சொல் குறைந்தபட்சம் 8 எழுத்துகள் இருக்க வேண்டும்",
+  "noInternetError": "இணைய இணைப்பு இல்லை. உங்கள் நெட்வொர்க் சரிபார்க்கவும்.",
+  "unexpectedError": "எதிர்பாராத பிழை ஏற்பட்டது. தயவுசெய்து மீண்டும் முயற்சிக்கவும்.",
+  "loginFailed": "உள்நுழைவு தோல்வியடைந்தது",
+  "loginImage": "உள்நுழைவு படம்",
+  "showPassword": "கடவுச்சொல்லை காட்டு",
+  "hidePassword": "கடவுச்சொல்லை மறை",
+  "appName": "AXION",
+  "signupButton": "பதிவு செய்க",
+  "splashScreenLogo": "பயன்பாட்டு லோகோ",
+  "signupStepOneImage": "படிமம் – படி 1",
+  "signupStepOneTagline": "தகவல் பெற்றிருங்கள், ஆரோக்கியமாக இருங்கள்.",
+  "signupStepTwoImage": "படிமம் – படி 2",
+  "signupStepTwoTagline": "உங்கள் மருத்துவ தகவல்களை எளிதாக அணுகலாம்.",
+  "signupStepThreeImage": "படிமம் – படி 3",
+  "enterOtp": "OTP ஐ உள்ளிடவும்",
+  "enterOtpHint": "6 இலக்க OTP ஐ உள்ளிடவும்",
+  "otpRequired": "OTP தேவை",
+  "invalidOtpFormat": "சரியான 6 இலக்க OTP ஐ உள்ளிடவும்",
+  "verify": "சரிபார்க்க",
+  "resendOtp": "OTP ஐ மீண்டும் அனுப்பு",
+  "resending": "மீண்டும் அனுப்புகிறது...",
+  "resendOtpFailed": "OTP அனுப்பல் தோல்வியடைந்தது",
+  "otpResent": "OTP வெற்றிகரமாக அனுப்பப்பட்டது",
+  "invalidOtp": "தவறான OTP",
+  "signupSuccess": "பதிவு வெற்றிகரமாக முடிந்தது!",
+  "signupFailed": "கணக்கை உருவாக்க முடியவில்லை",
+  "alreadyHaveAccount": "ஏற்கனவே கணக்கு உள்ளதா?",
+  "next": "அடுத்து",
+  "signupTagline": "தகவல் பெற்றிருங்கள், ஆரோக்கியமாக இருங்கள்.",
+  "nameValidation": "எழுத்துக்கள் மட்டுமே உள்ளிடவும்",
+  "loginErrorIncorrectPassword": "தவறான கடவுச்சொல். தயவுசெய்து முயற்சிக்கவும்.",
+  "loginErrorAccountNotFound": "கணக்கு கிடைக்கவில்லை. மின்னஞ்சலை சரிபார்க்கவும் அல்லது பதிவு செய்யவும்.",
+  "loginErrorVerifyEmail": "உள்நுழைவதற்கு முன் உங்கள் மின்னஞ்சலை சரிபார்க்கவும்.",
+  "nicRequired": "திாு அடையாள எண் தேவை",
+  "dobHint": "பிறந்த தேதி (MM/DD/YYYY)",
+  "dobRequired": "பிறந்த தேதி தேவை",
+  "dobInvalidFormat": "சரியான தேதி வடிவம் (MM/DD/YYYY) தேவை",
+  "phoneInvalid": "சரியான 10 இலக்க தொலைபேசி எண்ணை உள்ளிடவும்",
+  "passwordValidationUpper": "ஒரு பெரிய எழுத்து இருக்க வேண்டும்",
+  "passwordValidationLower": "ஒரு சிறிய எழுத்து இருக்க வேண்டும்",
+  "passwordValidationNumber": "ஒரு எண் இருக்க வேண்டும்",
+  "passwordValidationSpecial": "ஒரு சிறப்பு எழுத்து இருக்க வேண்டும்",
+  "signupStep1Incomplete": "முதல் படியை முதலில் முடிக்கவும்",
+  "otpSendFailed": "OTP அனுப்ப முடியவில்லை",
+  "errorPrefix": "பிழை: ",
+  "noReminders": "நினைவூட்டல்கள் இல்லை",
+  "immunizations": "தடுப்பூசிகள்",
+  "moreCount": "+{count} மேலும்",
+  "@moreCount": {
+    "description": "மீதி உருப்படிகளை குறிக்கும்",
+    "placeholders": {
+      "count": {
+        "type": "int",
+        "example": "3"
+      }
+    }
+  },
+  "noTitle": "தலைப்பு இல்லை",
+  "noDetail": "விவரங்கள் இல்லை",
+  "contactInfo": "தொடர்பு தகவல்",
+  "personalInfo": "தனிப்பட்ட தகவல்",
+  "fullName": "முழுப்பெயர்",
+  "birthday": "பிறந்த தேதி",
+  "settings": "அமைப்புகள்",
+  "logout": "வெளியேறு",
+  "confirmLogout": "வெளியேறுவதை உறுதிப்படுத்தவும்",
+  "logoutMessage": "நீங்கள் வெளியேற விரும்புகிறீர்களா?",
+  "cancel": "ரத்துசெய்",
+  "logoutFailed": "வெளியேற இயலவில்லை"
 }
